--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -18,5 +18,9 @@
 			<th>Visible</th>
 			<td><%= f.check_box(:visible) %></td>
 		</tr>
+			<tr>
+			<th>Link Name</th>
+			<td><%= f.text_field(:permalink) %></td>
+			</tr>		
 	
 </table>
