--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
+<%= link_to("<< Back to List", {:action => 'list', :subject_id => @subject.id}, :class => 'back-link') %>
 
 <div class="page new">
 	<h2>Show Page</h2>
@@ -16,6 +16,10 @@
 				<tr>
 					<th>Visible</th>
 					<td><%= @page.visible %></td>
+				</tr>
+				<tr>
+					<th>Link</th>
+					<td><%= @page.permalink %></td>
 				</tr>
 		</table>
 		
