--- a/app/views/subjects/list.html.erb
+++ b/app/views/subjects/list.html.erb
@@ -23,6 +23,11 @@
 			<td class="center"><%= status_tag(subject.visible) %></td>
 			<td class="center"><%= subject.pages.size %></td>
 			<td class="actions">
+				
+				<%= link_to("View Pages", {:controller => 'pages', :action => 'list', :subject_id => subject.id}, 
+				:class => 'action show') %>
+				<%= link_to("Show", {:action => 'show', :id => subject.id}, :class => 'action show') %>
+				
 				<%= link_to("Show", {:action => 'show', :id => subject.id}, :class => 'action_show') %>
 				<%= link_to("Edit", {:action => 'edit', :id => subject.id}, :class => 'action edit') %>
 				<%= link_to("Delete", {:action => 'delete', :id => subject.id}, :class => 'action delete') %>
