--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,9 +1,11 @@
-<%= link_to("<< Back to List", {:action => 'list', :subject_id => @subject.id}, :class => 'back-link') %>
+<% @page_title = "Edit Page: #{@page.name}" %>
+
+<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
 
 <div class="page new">
 	<h2>Edit Subject</h2>
 	
-	<%= form_for(:page, :url => {:action => 'update', :id => @page.id, :subject_id => @subject.id}) do |f| %>
+	<%= form_for(:page, :url => {:action => 'update', :id => @page.id}) do |f| %>
 			
 			<%= render(:partial => "form", :locals => {:f => f}) %>
 			
