--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -1,10 +1,9 @@
 <% @page_title = "Pages List" %>
 
-<%= link_to("<< Back to Subjects List", {:controller => "subjects", :action => 'list'}, :class => 'back-link') %>
 
 
 <div class="page list">
-<%= link_to("Add New Page", {:action => 'new', :subject_id => @subject.id}, :class => 'action new') %>
+<%= link_to("Add New Page", {:action => 'new'}, :class => 'action new') %>
 	
 	<h2>Pages</h2>
 	
@@ -25,9 +24,9 @@
 			<td class="center"><%= status_tag(page.visible) %></td>
 			<td class="center"><%= page.sections.size %></td>
 			<td class="actions">
-				<%= link_to("Show", {:action => 'show', :id => page.id, :subject_id => @subject.id}, :class => 'action_show') %>
-				<%= link_to("Edit", {:action => 'edit', :id => page.id, :subject_id => @subject.id}, :class => 'action edit') %>
-				<%= link_to("Delete", {:action => 'delete', :id => page.id, :subject_id => @subject.id}, :class => 'action delete') %>
+				<%= link_to("Show", {:action => 'show', :id => page.id}, :class => 'action_show') %>
+				<%= link_to("Edit", {:action => 'edit', :id => page.id}, :class => 'action edit') %>
+				<%= link_to("Delete", {:action => 'delete', :id => page.id}, :class => 'action delete') %>
 				</td>
 			</tr>
 			<% end %>
