--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,7 +1,7 @@
 <% @page_title = "Show Page: #{@page.name}" %>
 
 
-<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
+<%= link_to("<< Back to List", {:action => 'list', :subject_id => @subject.id}, :class => 'back-link') %>
 
 <div class="page new">
 	<h2>Show Page</h2>
