--- a/app/views/sections/delete.html.erb
+++ b/app/views/sections/delete.html.erb
@@ -1,9 +1,9 @@
-<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
+<%= link_to("<< Back to List", {:action => 'list', :page_id => @page.id}, :class => 'back-link') %>
 
 <div class="section delete">
 	<h2>Delete Section</h2>
 	
-	<%= form_for(:section, :url => {:action => 'destroy', :id => @section.id}) do |f| -%>
+	<%= form_for(:section, :url => {:action => 'destroy', :id => @section.id, :page_id => @page.id}) do |f| -%>
 		
 		<p>Are you sure?</p>
 		
