--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -2,7 +2,11 @@
 
 
 <table Summary="Page form fields">
-		
+		<tr>
+		<th>Subject</th>
+		<td><%= f.select(:subject_id, 1..@subject_count) %></td>
+		</tr>
+		<tr>
 		<th>Name</th>
 		<td><%= f.text_field(:name) %></td>
 		</tr>
