--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -10,7 +10,7 @@
 	
 <div><%= pluralize(@pages.size, 'page') %> found</div>
 	
-	<table class="listing" summary="Page list">
+	<table class="listing" Summary="Page list">
 		<tr class="header">
 			<th>&nbsp;</th>
 			<th>Page</th>
@@ -25,6 +25,11 @@
 			<td class="center"><%= status_tag(page.visible) %></td>
 			<td class="center"><%= page.sections.size %></td>
 			<td class="actions">
+				
+					<%= link_to("View Sections", {:controller => 'sections', :action => 'list', :page_id => page.id}, 
+					:class => 'action show') %>
+					<%= link_to("Show", {:action => 'show', :id => page.id}, :class => 'action show') %>
+				
 				<%= link_to("Show", {:action => 'show', :id => page.id, :subject_id => @subject.id}, :class => 'action_show') %>
 				<%= link_to("Edit", {:action => 'edit', :id => page.id, :subject_id => @subject.id}, :class => 'action edit') %>
 				<%= link_to("Delete", {:action => 'delete', :id => page.id, :subject_id => @subject.id}, :class => 'action delete') %>
