--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,9 +1,9 @@
-<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
+<%= link_to("<< Back to List", {:action => 'list', :page_id => @page.id}, :class => 'back-link') %>
 
 <div class="section new">
 	<h2>Edit Section</h2>
 	
-	<%= form_for(:section, :url => {:action => 'update', :id => @section.id}) do |f| %>
+	<%= form_for(:section, :url => {:action => 'update', :id => @section.id, :page_id => @page.id}) do |f| %>
 			
 			<%= render(:partial => "form", :locals => {:f => f}) %>
 			
