--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -2,7 +2,8 @@
 
 <table Summary="Section form fields">
 		<tr>
-		<th>Page ID</th>
+		<th>Page</th>
+		<td><%= f.select(:page_id, 1..@section_count) %></td>
 		</tr>
 		<tr>
 		<th>Name</th>
