--- a/app/views/sections/list.html.erb
+++ b/app/views/sections/list.html.erb
@@ -1,6 +1,7 @@
 <% @page_title = "Sections List" %>
 
 <%= link_to("<< Back to Pages List", {:controller => 'pages', :action => 'list'}, :class => 'back-link') %>
+<%= link_to("<< Back to Subjects List", {:controller => 'subjects', :action => 'list'}, :class => 'back-link') %>
 
 
 <div class="section list">
