--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -20,7 +20,7 @@
 		<tr>
 			<th>Content Type</th>
 			<td>
-			<%= f.radio_button(:content_type, 'Text') %> Text
+			<%= f.radio_button(:content_type, 'text') %> Text
 			<%= f.radio_button(:content_type, 'HTML') %> HTML
 			</td>
 		</tr>
