--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -3,7 +3,7 @@
 <table Summary="Section form fields">
 		<tr>
 		<th>Page</th>
-		<td><%= f.select(:page_id, 1..@section_count) %></td>
+		<td><%= f.select(:page_id, 1..@page_count) %></td>
 		</tr>
 		<tr>
 		<th>Name</th>
