--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -28,9 +28,8 @@
 				
 			<%= link_to("View Sections", {:controller => 'sections', :action => 'list', :page_id => page.id}, 
 					:class => 'action show') %>
-			<%= link_to("Show", {:action => 'show', :id => page.id, :page_id => page.id}, :class => 'action show') %>
+			<%= link_to("Show", {:action => 'show', :id => page.id, :subject_id => @subject.id}, :class => 'action show') %>
 				
-				<%= link_to("Show", {:action => 'show', :id => page.id, :subject_id => @subject.id}, :class => 'action_show') %>
 				<%= link_to("Edit", {:action => 'edit', :id => page.id, :subject_id => @subject.id}, :class => 'action edit') %>
 				<%= link_to("Delete", {:action => 'delete', :id => page.id, :subject_id => @subject.id}, :class => 'action delete') %>
 				</td>
