--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -11,7 +11,7 @@
 		</tr>
    		<tr>
 			<th>Position</th>
-			<td><%= f.text_field(:position) %></td>
+			<td><%= f.select(:position, 1..@section_count) %></td>
 		</tr>
 		<tr>
 			<th>Visible</th>
