--- a/app/views/sections/list.html.erb
+++ b/app/views/sections/list.html.erb
@@ -26,7 +26,8 @@
 			<td class="center"><%= status_tag(section.visible) %></td>
 			<td class="center"><%= section.content_type %></td>
 			<td class="actions">
-				<%= link_to("Show", {:action => 'show', :id => section.id, :page_id => @page.id}, :class => 'action_show') %>
+				<%= link_to("Show", {:action => 'show', :id => section.id, :page_id => @page.id}, :class => 'action show') %>
+			
 				<%= link_to("Edit", {:action => 'edit', :id => section.id, :page_id => @page.id}, :class => 'action edit') %>
 				<%= link_to("Delete", {:action => 'delete', :id => section.id, :page_id => @page.id}, :class => 'action delete') %>
 				</td>
