--- a/app/views/admin_users/list.html.erb
+++ b/app/views/admin_users/list.html.erb
@@ -1,5 +1,7 @@
 <% @page_title = "Admin Users List" %>
 
+<%= link_to("<< Back to Menu", {:controller => 'access', :action => 'menu'}, :class => 'back-link') %>
+
 
 <div class="user list">
 	
