--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
 			<%= subject.name %>
 				<ul>
 					<% subject.pages.visible.sorted.each do |page| %>
-						<li><%= link_to(page.name, :action => 'show', :id => page.permalink)%></li>
+						<li><%= link_to_unless_current(page.name, :action => 'show', :id => page.permalink)%></li>
 						<% end %>
 				</ul>
 		</li>
