--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -21,6 +21,8 @@
 					<th>Visible</th>
 					<td><%= @section.visible %></td>
 				</tr>
+				<%= image_tag('rails.png', :size => '50x64', :alt => "Rails logo") %>
+				
 		</table>
 		
 		
