--- a/app/views/subjects/list.html.erb
+++ b/app/views/subjects/list.html.erb
@@ -1,5 +1,6 @@
 <% @page_title = "Subjects List" %>
 
+<%= link_to("<< Back to Menu", {:controller => 'access', :action => 'menu'}, :class => 'back-link') %>
 
 <div class="subject list">
 <%= link_to("Add New Subject", {:action => 'new'}, :class => 'action new') %>
