--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -3,11 +3,12 @@
 <div class="section new">
 	<h2>Edit Section</h2>
 	
-	<%= form_for(:section, :url => {:action => 'update', :id => @section.id, :page_id => @page.id}) do |f| %>
+	<%= form_for(:section, :url => {:action => 'update', :id => @section.id, :page_id => @page.id, :html => { :multipart => true }}) do |f| %>
 			
 			<%= render(:partial => "form", :locals => {:f => f}) %>
 			
 		<div class="form-buttons">
+			<%= f.file_field :avatar %>
 			<%= submit_tag("Update") %>	
 		</div>
 		
