--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -3,12 +3,13 @@
 <div class="section new">
 	<h2>Create Section</h2>
 	
-	<%= form_for(:section, :url => {:action => 'create', :page_id => @page.id}) do |f| %>
+	<%= form_for(:section, :url => {:action => 'create', :page_id => @page.id, :html => { :multipart => true }}) do |f| %>
 		
 	<%= render(:partial => "form", :locals => {:f => f}) %>
 	
 		
 		<div class="form-buttons">
+			<%= f.file_field :avatar %>
 			<%= submit_tag("Create Section") %>	
 		</div>
 		
