--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -23,7 +23,12 @@
 				</tr>
 				<tr>
 				
-			<td><caption><%= @section.name %></caption><%= image_tag @section.avatar.url %></td>
+			<td>
+			<caption>
+			<%= @section.name %>
+			</caption>
+			<%= image_tag @section.avatar.url %>
+			</td>
 				</tr>
 			
 			
