--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -19,7 +19,7 @@ img { border: none; }
 table { border-collapse: collapse; }
 table tr th, table tr td { vertical-align: top; text-align: left; 
   padding: 3px; }
-a, a:visited { color: purple; }
+a, a:visited { color: turquoise; }
 a:hover {}
 
 .clear { clear: both; }
@@ -27,14 +27,14 @@ a:hover {}
 
 /* Structure */
 #header { height: 4em; padding-top: 1em; text-align: center; 
-  background: blue; color: white; background-image: url(bg1.png);}
+  background: blue; color: white; background-image: url(bg2.png);}
 #header h1 { margin: 0; padding: 0; }
 #main { min-height: 500px; background: white; }
 #navigation { float: left; width: 180px; min-height: 480px; padding: 10px; 
-  background: black; color: white; background-image: url(bg1.png)}
+  background: blue; color: white; background-image: url(bg2.png)}
 #content { float: left; padding: 10px; text-align: center;}
 #footer { clear: both; height: 2.5em; text-align: center;
-  background: blue; color: white; background-image: url(bg1.png) }
+  background: blue; color: white; background-image: url(bg2.png) }
 #footer p { margin: 0; padding: 0.5em 1em; }
 
 /* Navigation */
