--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -22,6 +22,9 @@
 			<td>
 			<%= f.radio_button(:content_type, 'text') %> Text
 			<%= f.radio_button(:content_type, 'HTML') %> HTML
+			<%= f.radio_button(:content_type, 'avatar') %> Picture
+			
+			
 			</td>
 		</tr>
 		<tr>
