--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -53,9 +53,10 @@ a:hover {}
     border-radius:              10px;
 
 }
+
 img {
 
-padding 1em;
+padding: 1em;
 background: silver;
 width: 560px;
 height: 300px;
