--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -26,8 +26,7 @@ a:hover {}
 .center { text-align: center; }
 
 /* Structure */
-#header { height: 4em; padding-top: 1em; text-align: center; 
-  background: blue; color: white; background-image: url(bg2.png);}
+#header { height: 4em; padding-top: 1em; text-align: center; color: white; background-image: url(bg3.jpg);}
 #header h1 { margin: 0; padding: 0; }
 #main { min-height: 500px; background: white; }
 #navigation { float: left; width: 180px; min-height: 480px; padding: 10px; 
