--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -17,6 +17,9 @@
 			<div class="round" id="navigation">
 				<%= render(:partial => 'layouts/navigation', :locals => {:subjects => @subjects}) %>
 			</div>
+			<div class="round" id="navigation_2">
+				<%= render(:partial => 'layouts/navigation', :locals => {:subjects => @subjects}) %>
+			</div>
 				<div class="round" id="content">
 					<%= yield %>
 								
