--- a/app/views/access/menu.html.erb
+++ b/app/views/access/menu.html.erb
@@ -1,7 +1,7 @@
 <% @page_title = "Admin Menu" %>
 
 <div class="menu">
-	<h2>Admin Menu</h2>
+	<h2>Home</h2>
 	<div class="identity">You are: <%= session[:username]%></div>
 	<ul>
 		<li><%= link_to("Manage Content", :controller => 'subjects') %></li>
