--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -66,6 +66,7 @@ border-radius:              10px;
 
 }
 
+.login form { margin: 100px 250px; }
 .menu .identity { text-align: center; background-image: url(footer.jpg); color:white;
 	-moz-border-radius:         10px;
     -webkit-border-radius:      10px;
@@ -73,12 +74,4 @@ border-radius:              10px;
 	
 	
 	 }
-	.menu ul { margin: 3em 250px; list-style: none;}
-	.menu ul li { margin-bottom: 1em; }
-	.menu a {color: white;
-		background-image: url(footer.jpg);
-		-moz-border-radius:         10px;
-	    -webkit-border-radius:      10px;
-	    border-radius:              10px;
-		padding: 1em;
-		}
+	
