--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -1,14 +1,5 @@
 /* Public stylesheet */
 
-/* Colors
-red:          #993120
-green:        #94B26F
-light green:  #B6D491
-yellow:       #F2DC87
-dark brown:   #332318
-light brown:  #4C2516
-*/
-
 
 html { height: 100%; width: 100%; }
 body { width: 100%; min-width: 980px; height: 100%; margin: 0; padding: 0; 
@@ -28,12 +19,12 @@ a:hover {}
 /* Structure */
 #header { height: 4em; padding-top: 1em; text-align: center; color: white; background-image: url(bg6.jpg)}
 #header h1 { margin: 0; padding: 0; }
-#main { min-height: 500px; background: white; border: 1px groove black}
+#main { min-height: 500px; background: white; border:;}
 #navigation { float: left; width: 180px; min-height: 480px; padding: 10px; 
   background: blue; color: white; background-image: url(bg7.jpg)}
 #navigation_2 { float: right; width: 180px; min-height: 480px; padding: 10px; 
   background: blue; color: white; background-image: url(bg7.jpg)}
-#content { float: left; padding: 10px; text-align: center; border: 1px groove black}
+#content { float: left; padding: 10px; text-align: center; list-style:none}
 #footer { clear: both; height: 2.5em; text-align: center; color: white; background-image: url(footer.jpg) }
 #footer p { margin: 0; padding: 0.5em 1em; }
 
