--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -27,7 +27,7 @@
 			<caption>
 			<%= @section.name %>
 			</caption>
-			<%= image_tag @section.avatar.url %>
+			<%= image_tag @section.avatar.url(:thumb) %>
 			</td>
 				</tr>
 			
