--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -12,11 +12,16 @@
 
 
 a { text-decoration: none; }
-a:hover { text-decoration: underline; color:black}
+a:hover { text-decoration: underline; color:blue}
 /* large action buttons */
 a.action { float: right; padding: 2px 5px; margin: 0 0 1em 1em; 
   background: blue; color: white;  border: 1px solid white;
-  text-decoration: none; font-size: 0.8em; text-align: center; }
+  text-decoration: none; font-size: 0.8em; text-align: center;
+   -moz-border-radius:         10px;
+    -webkit-border-radius:      10px;
+    border-radius:              10px;
+  
+   }
 a.action:hover { background: black; }
 
 /* small action buttons */
@@ -31,7 +36,14 @@ a.action:hover { background: black; }
 /* CRUD */
 .notice {height: 1.25em; padding: 0.5em; text-align: center;
   background: #B6D491; color: black; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px;}
-.back-link { font-size: 0.8em; margin-bottom: 1em; }
+.back-link { font-size: 0.8em; margin-bottom: 1em; 
+	 -moz-border-radius:         10px;
+    -webkit-border-radius:      10px;
+    border-radius:              10px;
+    background:black;
+    padding:3px;
+
+ }
 .form-buttons { text-align: center; margin: 1em 0; 
 	-moz-border-radius:         10px;
     -webkit-border-radius:      10px;
