--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -14,7 +14,11 @@
 	</div>
 	<br />
 		<div class="round" id="main">
-			
+			<div class="round" id="navigation">
+				<%= render(:partial => 'layouts/navigation', :locals => {:subjects => @subjects}) %>
+			</div>
+			<div class="round" id="navigation_2">
+			</div>
 				<div class="round" id="content">
 					<%= yield %>
 								
