--- a/app/views/access/show.html.erb
+++ b/app/views/access/show.html.erb
@@ -1,5 +1,5 @@
-<%= link_to("<< Back to Menu", {:controller => 'access', :action => 'menu'}, :class => 'back-link') %>
-
+<p style="background:black; padding:3px;" class="round"><%= link_to("<< Back to Menu", {:controller => 'access', :action => 'menu'}, :class => 'back-link') %>
+</p>
 
 
 <h2><%= @page.name%></h2>
