--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -1,6 +1,12 @@
 /* Public stylesheet */
 
 
+img {
+-moz-border-radius:         10px;
+-webkit-border-radius:      10px;
+border-radius:              10px;
+}
+
 html { height: 100%; width: 100%; }
 body { width: 100%; min-width: 980px; height: 100%; margin: 0; padding: 0; 
   font: 14px Verdana,Lucida,Arial,Helvetica,sans-serif; color: black; }
@@ -19,7 +25,7 @@ a:hover {}
 /* Structure */
 #header { height: 4em; padding-top: 1em; text-align: center; color: white; background-image: url(bg6.jpg)}
 #header h1 { margin: 0; padding: 0; }
-#main { min-height: 500px; background: white; border:;}
+#main { min-height: 500px; background: white; border:; background:url()}
 #navigation { float: left; width: 140px; min-height: 480px; padding: 10px; 
   background: blue; color: white; background-image: url(bg7.jpg)}
 #navigation_2 { float: right; width: 140px; min-height: 480px; padding: 10px; 
