--- a/app/views/access/show.html.erb
+++ b/app/views/access/show.html.erb
@@ -12,7 +12,7 @@
 			<p><%= section.content  %></p>
 		<% when 'avatar' %>
 		<p><%= section.content  %><br />
-		<%= image_tag section.avatar.url(:thumb) %>
+		<%= image_tag section.avatar.url(:medium) %>
 		</p>
 		<% end %>
 					
